# pgvd

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CellIntersections.h  CopyIfDifferent.txt  Karras.cpp  Karras.h  OctCell.h  OctNode.h  OctreeUtils.cpp  OctreeUtils.h  Options.cpp  Options.h  README.md  README.txt  Resln.h
C/: BigUnsigned.c  BigUnsigned.h  BrtNode.h  BuildBRT.c  BuildBRT.h  BuildOctree.c  BuildOctree.h  CMakeLists.txt  Line.h  OctNode.h  ParallelAlgorithms.c  ParallelAlgorithms.h  bool.h  dim.h  vec_cl.h  z_order.c  z_order.h
C/BigUnsigned/: BigUnsigned.c  BigUnsigned.h
C/BinaryRadixTree/: BrtNode.h  BuildBRT.c  BuildBRT.h  CMakeLists.txt
C/Boolean/: CMakeLists.txt  bool.h
C/BoundingBox/: BoundingBox.c  BoundingBox.h  CMakeLists.txt
C/CellResolution/: CMakeLists.txt  CellResolution.c  CellResolution.h
C/Dimension/: dim.h
C/Line/: Line.h
C/Octree/: BuildOctree.c  BuildOctree.h  CMakeLists.txt  OctNode.h
C/OctreeResolution/: CMakeLists.txt  Resln.h
C/ParallelAlgorithms/: CMakeLists.txt  ParallelAlgorithms.c  ParallelAlgorithms.h
C/Vector/: CMakeLists.txt  vec_n.h
C/ZOrder/: z_order.h
CLFW/include/: clfw.hpp
CLFW/src/: CMakeLists.txt  clfw.cpp
CMake/: FindGLFW.cmake  FindGLM.cmake  FindOpenCL.cmake
CPP/: CMakeLists.txt  main_pgvd2.cpp
CPP/Color/: CMakeLists.txt  Color.h
CPP/Events/: CMakeLists.txt  events.cpp
CPP/Karras/: Karras.cpp  (+1 more)
Dependencies/CLFW/src/: CMakeLists.txt  clfw.cpp
OpenCL/: opencl_sources.txt
SharedSources/: CMakeLists.txt
SharedSources/BigUnsigned/: BigUnsigned.c  CMakeLists.txt
SharedSources/BinaryRadixTree/: BrtNode.h  BuildBRT.c  BuildBRT.h
SharedSources/BoundingBox/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt
SharedSources/CellResolution/: CMakeLists.txt  Conflict.cpp  Conflict.h  ConflictCellDetection.cpp  ConflictCellDetection.h  LineTransform.h
SharedSources/Dimension/: CMakeLists.txt  dim.h
SharedSources/Line/: CMakeLists.txt  Line.h
SharedSources/Octree/: BuildOctree.cpp  BuildOctree.h  CMakeLists.txt  OctNode.h
SharedSources/OctreeDefinitions/: CMakeLists.txt  defs.h
SharedSources/OctreeResolution/: Resln.h
SharedSources/OpenCL/: opencl_sources.txt
SharedSources/OpenCL/Kernels/: TestKernels.cl  kernels.cl
SharedSources/OpenGL/Shaders/: boxes.frag  boxes.vert  lines.vert  sketchPoint.vert
SharedSources/ParallelAlgorithms/: ParallelAlgorithms.c  ParallelAlgorithms.h
SharedSources/Quantize/: CMakeLists.txt  Quantize.h
SharedSources/Vector/: CMakeLists.txt  vec.h  vec_cl.h  vec_cpp.h
SharedSources/ZOrder/: CMakeLists.txt  z_order.h
Sources/: CMakeLists.txt  CollisionDetectionMain.cpp  QuadtreeMain.cpp  main_pgvd2.cpp
Sources/BigUnsigned/: BigNum.h  BigUnsigned.h  CMakeLists.txt  LCP.h  TestBig.cpp
Sources/BinaryRadixTree/: BrtNode.h  BuildBRT.h  CMakeLists.txt
Sources/Boolean/: CMakeLists.txt
Sources/BoundingBox/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt
Sources/Catch/: BenchKernels.cpp  BenchmarkMain.cpp  CMakeLists.txt  HelperFunctions.hpp  TestKernels.cpp  catch.hpp  catchmain.cpp
Sources/CellResolution/: CMakeLists.txt  Conflict.cpp  Conflict.h  ConflictCellDetection.cpp  ConflictCellDetection.h  LineTransform.h
Sources/Color/: CMakeLists.txt  Color.cpp  Color.h
Sources/Dimension/: CMakeLists.txt  dim.h
Sources/Events/: CMakeLists.txt  CollisionDetectionEvents.cpp  CollisionDetectionEvents.h  QuadtreeEvents.cpp  events.cpp  events.h  mouse.h
Sources/GLUtilities/: CMakeLists.txt  OrthoCamera.cpp  OrthoCamera.h  Polygons.cpp  Polygons.h  Sketcher.cpp  Sketcher.h  gl_utils.cpp  gl_utils.h  objload.h
Sources/GlobalData/: CMakeLists.txt  data.cpp  data.h
Sources/Karras/: CMakeLists.txt  Karras.cpp  Karras.h
Sources/Kernels/: CMakeLists.txt  Kernels.cpp  Kernels.h
Sources/Line/: CMakeLists.txt  Line.h
Sources/Octree/: BuildOctree.cpp  BuildOctree.h  CMakeLists.txt  OctNode.h  Octree2.cpp  Octree2.h
Sources/OctreeDefinitions/: CMakeLists.txt  defs.h
Sources/OctreeResolution/: CMakeLists.txt  Resln.h
Sources/OpenCL/: CMakeLists.txt  opencl_sources.txt
Sources/OpenCL/Kernels/: NvidiaReductionKernels.cl  kernel.spir  spirKernel.cl
Sources/OpenCL/Kernels/scan/: CyclicScanKernel.cl  intra_warp_local_scan.cl
Sources/OpenGL/: CMakeLists.txt
Sources/OpenGL/Shaders/: boxes.vert  lines.frag  plane.frag  plane.vert  points.frag  sketchLine.vert  test-v1.2.vert_old
Sources/Options/: CMakeLists.txt  Options.cpp  Options.h
Sources/ParallelAlgorithms/: CMakeLists.txt  ParallelAlgorithms.c  ParallelAlgorithms.h
Sources/Polylines/: CMakeLists.txt  Polylines.cpp  Polylines.h
Sources/Quantize/: CMakeLists.txt  Quantize.h
Sources/Shaders/: CMakeLists.txt  Shaders.cpp  Shaders.hpp
Sources/Shaders/Programs/: CMakeLists.txt  LinesProgram.h  ShaderProgram.cpp  ShaderProgram.hpp
Sources/Timer/: CMakeLists.txt  timer.h
Sources/UNSORTED/: CMakeLists.txt  Geom.cpp  Geom.h  vec_cpp.h
Sources/Vector/: CMakeLists.txt  vec.h  vec_cl.h  vec_cpp.h  vec_n_old.h
Sources/ZOrder/: CMakeLists.txt  z_order.h
Sources/log4cplus/: CMakeLists.txt  Makefile.in  log4cplus.config-sample
UnitTests/: KernelTests.cpp  main.cpp
UnusedFiles/: Conflict.cpp  Conflict.h  LineTransform.h  OctreeUtils.cpp  OctreeUtils.h
VisualStudioBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  PGVD.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  pgvd2.vcxproj  pgvd2.vcxproj.filters
cmake/: FindOpenCL.cmake
opencl/: Geom.cpp  Kernels.cpp  Kernels.h  defs.h  dim.h  opencl_sources.txt  vec_cl.h  vec_cpp.h
opengl/: ShaderProgram.cpp  ShaderProgram.hpp  Shaders.cpp  Shaders.hpp  gl_utils.cpp  gl_utils.h
pgvdBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  PGVD.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  find.err  pgvd2.vcxproj  pgvd2.vcxproj.filters
tests/: KernelBoxTests.cpp  KernelTests.cpp  clfw_tests.cpp  main.cpp
viewer/: Color.h  LinesProgram.h  Octree2.cpp  Octree2.h  Polylines.h  gl_utils.cpp  gl_utils.h  main_fit2.cpp  main_pgvd2.cpp  main_test2.cpp
(+97 files in other folders)
